dev: updating latency issues
